@@ -7,6 +7,7 @@ munin (CVS)
   * Main: HTML cleanup (Deb#296676).
   * Main: Re-enable width/height attributes to img tags.
   * Main: Escape regexps more properly (Deb#296575).
+  * Main: Correct expires-headers in CGI output (SF#1159742).
   * Node: munin-node didn't treat default_plugin_user properly (Deb#295366).
   * Plugins: linux/if* now treats ra* interfaces as wireless.
   * Plugins: minor bugfix in generic/bind9.
